--- a/lib/oliya_web/templates/layout/app.html.eex
+++ b/lib/oliya_web/templates/layout/app.html.eex
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
-    <%= render @view_module, @view_template, assigns %>
+    <%= @inner_content %>
 
     <script type="text/javascript" src='<%= Routes.static_path(@conn, "/js/manifest.js") %>'></script>
     <script type="text/javascript" src='<%= Routes.static_path(@conn, "/js/vendor.js") %>'></script>
